--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,8 @@
-// app global css in SCSS form
+// app global css in SCSS form}
+h1{
+  font-size: 30px;
+  line-height: 1;
+}
+.flex-row{
+  flex-direction: row;
+}
